--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/nyel-gh/merge-pdf-buffers#readme",
   "dependencies": {
-    "hummus": "^1.0.108",
-    "memory-streams": "^0.1.3"
+    "memory-streams": "^0.1.3",
+    "muhammara": "^5.0.2"
   }
 }
